# IGN_LIDAR_HD_DATASET

./: .git-commit-message.txt  .git_commit_message.txt  .gitignore  .pre-commit-config.yaml  3D_EXTRUSION_IMPLEMENTATION.md  ACTION_CHECKLIST.md  ACTION_PLAN.md  ACTION_PLAN_GPU_OPTIMIZATIONS.md  ADAPTIVE_CLASSIFICATION_SUMMARY.md  ANALYSIS_AND_MIGRATION_COMPLETE.md  ANALYSIS_COMPLETE.md  ARCHITECTURE_NAMING_FIX_SUMMARY.md  ARCHITECTURE_V2_UPDATED.md  ARTEFACT_AUDIT_COMPLETE.md  ARTEFACT_AUDIT_REPORT.md  ARTEFACT_AUDIT_SUMMARY.md  ARTIFACT_ARCHITECTURE.md  ARTIFACT_AUDIT_COMPLETE.md  ARTIFACT_AUDIT_ENRICH_REPORT.md  ARTIFACT_AUDIT_INDEX.md  ARTIFACT_CHECKLIST.md  ARTIFACT_FIX_SUMMARY.md  ARTIFACT_MITIGATION_PLAN.md  ARTIFACT_MITIGATION_SUMMARY.md  ARTIFACT_QUICK_REFERENCE.md  ARTIFACT_REPORT_PATCH300.md  ASPRS_CLASSES_REFERENCE.md  ASPRS_FEATURES_QUICK_REFERENCE.md  ASPRS_FEATURES_UPDATE_SUMMARY.md  ASPRS_FEATURE_ANALYSIS.md  ASPRS_FEATURE_REQUIREMENTS.md  AUDIT_ACTION_ITEMS.md  AUDIT_CHECKLIST.md  AUDIT_COMPREHENSIVE_REPORT_V26_NOV_2025.md  AUDIT_CONSOLIDATION_ACTION_PLAN_2025.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_HYDRA_IMPLEMENTATION.md  AUDIT_INDEX.md  AUDIT_INDEX_AND_GUIDE.md  AUDIT_PROGRESS.md  (+539 more)
.github/: copilot-instructions.md
.serena/: QUICK_REFERENCE.md  README.md  coding_patterns.md  project.yml  project_active.json  project_overview.md  verify_setup.sh
_backup_phase3/: transport_detection.py
backup_20251017_090518/: config_asprs_rtx4080.yaml  run_forced_ultra_fast.sh  run_gpu_conservative.sh  run_ground_truth_reclassification.sh
backup_20251017_090545/: config_asprs_rtx4080.yaml  run_gpu_conservative.sh
backup_additional_20251017_113534/: run_forced_ultra_fast.sh  run_ground_truth_reclassification.sh
both/: config.yaml  stats.json
conda-recipe/: PACKAGE_INFO.md  README.md  build.sh  environment.yml  environment_gpu.yml  meta.yaml
config_examples/: pipeline_enrich.yaml  pipeline_full.yaml  pipeline_patch.yaml
configs/: README.md  README_v3.md  classification_config.yaml  config.yaml  config_asprs_rtx4080.yaml  default.yaml  default_v3.yaml  enrichment_asprs_full.yaml  example_enrichment_full.yaml  processing_config.yaml  processing_with_reclassification.yaml  reclassification_config.yaml
configs_legacy_20251017_115047/: config_asprs_rtx4080.yaml
docs/: ADAPTIVE_BUILDING_CLASSIFICATION_GUIDE.md  ADVANCED_CLASSIFICATION_GUIDE.md  API_ENHANCED_BUILDING.md  ARTIFACT_DETECTION.md  AUDIT_ACTION_PLAN.md  AUDIT_EXECUTIVE_SUMMARY.md  BUILDING_CLASSIFICATION_ANALYSIS.md  BUILDING_CLASSIFICATION_GUIDE.md  BUILDING_FUSION_GUIDE.md  BUILDING_MODULE_MIGRATION_GUIDE.md  CLASSIFICATION_ACTION_PLAN.md  CLASSIFICATION_ANALYSIS_REPORT_2025.md  CLASSIFICATION_AUDIT_CORRECTION.md  CLASSIFICATION_AUDIT_INDEX.md  CLASSIFICATION_AUDIT_README.md  CLASSIFICATION_AUDIT_REPORT.md  CLASSIFICATION_COMPLETE.md  CLASSIFICATION_CONSOLIDATION_PLAN.md  CLASSIFICATION_CONSOLIDATION_README.md  CLASSIFICATION_DOCS_INDEX.md  CLASSIFICATION_DOCUMENTATION_INDEX.md  CLASSIFICATION_ENHANCEMENTS_V2.md  CLASSIFICATION_EXECUTIVE_SUMMARY.md  CLASSIFICATION_PROGRESS_REPORT.md  CLASSIFICATION_QUALITY_AUDIT_2025.md  CLASSIFICATION_QUALITY_AUDIT_SUMMARY.md  CLASSIFICATION_QUICK_REFERENCE.md  CLASSIFICATION_STYLE_GUIDE.md  CLASSIFICATION_V2_SUMMARY.md  COMPREHENSIVE_ADAPTIVE_CLASSIFICATION_GUIDE.md  CONFIGURATION_UPDATES_V5.1.md  DOCUMENTATION.md  DTM_AUGMENTATION_GUIDE.md  DTM_FALLBACK_GUIDE.md  DTM_FALLBACK_IMPLEMENTATION.md  DTM_FALLBACK_SUMMARY.md  DTM_VARIABLE_OBJECTS_FILTERING.md  ENHANCED_BUILDING_CLASSIFICATION_GUIDE.md  FEATURE_AUDIT_REPORT.md  FEATURE_MODES_DOCUMENTATION.md  (+83 more)
enriched/: config.yaml  stats.json
evaluation/: README.md  agent_evaluator.py  classification_evaluator.py  lidar_agent.py
examples/: .gitignore  ARCHITECTURAL_CONFIG_REFERENCE.md  ARCHITECTURAL_STYLES_README.md  CONFIGURATION_CHANGES.md  EXAMPLES_README_v2.md  FEATURE_IMPORTANCE_VISUALIZATION.md  FEATURE_SELECTION_QUICK_REFERENCE.md  GPU_TRAINING_WITH_GROUND_TRUTH.md  LOD2_FEATURE_OPTIMIZATION.md  MEMORY_OPTIMIZATION.md  MULTISCALE_QUICK_REFERENCE.md  MULTI_SCALE_TRAINING_STRATEGY.md  QUICK_START_GPU_GROUND_TRUTH.md  README.md  README_ASPRS_OPTIMIZED.md  README_RULES_EXAMPLES.md  TEMPLATE_v3.2.yaml  advanced_usage.py  basic_usage.py  classification_engine_example.py  compare_augmentation_approaches.py  config_adaptive_building_classification.yaml  config_architectural_analysis.yaml  config_architectural_analysis_v5.0.yaml  config_architectural_analysis_v5.1.yaml  config_architectural_training.yaml  config_architectural_training_v5.0.yaml  config_architectural_training_v5.1.yaml  config_asprs_aggressive_buildings_v5.5.yaml  config_asprs_bdtopo_cadastre_cpu_fixed.yaml  config_asprs_bdtopo_cadastre_cpu_optimized.yaml  config_asprs_bdtopo_cadastre_cpu_v3.yaml  config_asprs_bdtopo_cadastre_cpu_v3_memory_safe.yaml  config_asprs_bdtopo_cadastre_gpu_memory_efficient.yaml  config_asprs_bdtopo_cadastre_optimized.yaml  config_asprs_gpu_16gb.yaml  config_asprs_production.yaml  config_asprs_production_v6.3.yaml  config_auto.yaml  config_building_fusion.yaml  (+92 more)
ign_lidar/: CONFIGS_REMOVED.md  __init__.py  asprs_classes.py  classes.py  classification_schema.py  cli.py  cli_config.py  cli_utils.py  config.py  downloader.py  features.py  features_gpu.py  features_gpu_chunked.py  infrared_augmentation.py  memory_manager.py  metadata.py  pipeline_config.py  preprocessing.py  processor.py  qgis_converter.py  rgb_augmentation.py  tile_analyzer.py  tile_list.py  utils.py  verification.py  verifier.py
scripts/: CONVERT_HDF5_TO_LAZ.md  CONVERT_NPZ_TO_LAZ.md  README.md  REFACTORING_README.md  analyze_duplication.py  analyze_features.py  analyze_npz_detailed.py  analyze_refactoring_impact.py  analyze_unified_dataset.py  apply_audit_phase1.py  audit_building_facade_detection.py  audit_class_usage.py  audit_configs.py  audit_deprecations_v4.py  audit_feature_modes.py  audit_quickstart.sh  batch_analyze_artifacts.py  batch_convert_qgis.py  benchmark_bottleneck_fixes.py  benchmark_classification_optimizations.py  benchmark_cuda_optimizations.py  (+167 more)
(+1437 files in other folders)
